:boom: MFXCheckbox has been reworked
Controls Package
:sparkles: Added new features to MFXCheckbox
:fire: MFXCheckbox, removed all styleable properties as there's no need (see MFXCheckBox.css to learn how to style the icon)
:sparkles: LabeledControlWrapper, this new control will soon be used in all eligible MaterialFX controls. It's basically a Label that has all its properties bound to a labeled Control. This way the control's text is fully customizable with CSS.
:recycle: MFXIconWrapper is now capable of auto-sizing itself, just use -1 as size

Font Package
:bug: MFXFontIcon, fixed a very annoying bug that prevented icons from being styled with CSS if properties were set with code (via setters/constructors). To be precise rather than a bug it's the normal behavior of JavaFX's styleable properties, but it's annoying so I added a workaround to make it always work
:sparkles: Added new resources

Skin Package
:boom: MFXCheckboxSkin has been reworked

MFXCheckBox.css has been reworked too, since now most of the MFXCheckbox appearance is determined by its stylesheet

Other changed files that are not mentioned here are a consequence of the above changes

Signed-off-by: palexdev <alessandro.parisi406@gmail.com>